# Eventories

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  run.sh
src/: lib.rs  main.rs
src/adapter/inbound/api/controller/: docs.rs  mod.rs
src/adapter/inbound/api/controller/router/: router.rs
src/adapter/inbound/api/controller/shared/dtos/: health_dto.rs  mod.rs  root_dto.rs
src/adapter/inbound/api/controller/shared/handlers/: health.rs  mod.rs  root.rs
src/adapter/inbound/api/controller/v1/: mod.rs  router.rs
src/adapter/inbound/api/controller/v1/dtos/: info_dto.rs  mod.rs
src/adapter/inbound/api/controller/v1/handlers/: info.rs  mod.rs
src/adapter/outbound/: mod.rs
src/infrastructure/config/: mod.rs
src/shared/: errors.rs  middleware.rs  mod.rs
